ネイティブアクセスに関する警告抑止オプションの指定